--- a/springboot-admin/pom.xml
+++ b/springboot-admin/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.clownfish7</groupId>
-    <artifactId>springboot-security</artifactId>
+    <artifactId>springboot-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-security</name>
+    <name>springboot-admin</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -22,19 +22,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <artifactId>spring-boot-admin-starter-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
