--- a/springboot-security/src/main/resources/application.yml
+++ b/springboot-security/src/main/resources/application.yml
@@ -1,1 +1,16 @@
 
+spring:
+  boot:
+    admin:
+      client:
+        url: "http://localhost:8080"
+server:
+  port: 8088
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
