--- a/springboot-fastdfs/src/main/resources/application.yml
+++ b/springboot-fastdfs/src/main/resources/application.yml
@@ -8,10 +8,16 @@ fastdfs:
 fdfs:
   soTimeout: 1500 #socket\u8FDE\u63A5\u8D85\u65F6\u65F6\u957F
   connectTimeout: 600 #\u8FDE\u63A5tracker\u670D\u52A1\u5668\u8D85\u65F6\u65F6\u957F
-  resHost: 192.168.5.129
-  storagePort: 8889
+  resHost: 192.168.116.133
+  storagePort: 8888
   thumbImage: #\u7F29\u7565\u56FE\u751F\u6210\u53C2\u6570\uFF0C\u53EF\u9009
     width: 150
     height: 150
   trackerList: #TrackerList\u53C2\u6570,\u652F\u6301\u591A\u4E2A\uFF0C\u6211\u8FD9\u91CC\u53EA\u6709\u4E00\u4E2A\uFF0C\u5982\u679C\u6709\u591A\u4E2A\u5728\u4E0B\u65B9\u52A0- x.x.x.x:port
-    - 192.168.5.129:22122
+    - 192.168.116.133:22122
+spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-request-size: 100MB
+      max-file-size: 100MB
