--- a/springboot-sharding-jdbc/src/main/resources/application.yml
+++ b/springboot-sharding-jdbc/src/main/resources/application.yml
@@ -2,12 +2,18 @@ spring:
   application:
     name: sharding-jdbc
   shardingsphere:
-    datasource:
-      names: ds0,ds1
+    datasource: #数据源配置，可配置多个data_source_name
+      names: ds0,ds1,ds0-slave,ds1-slave
       ds0:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
         url: jdbc:mysql://localhost:3306/order_db?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+        username: root
+        password: 19970806
+      ds0-slave:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/order_db_slave?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
         username: root
         password: 19970806
       ds1:
@@ -16,10 +22,16 @@ spring:
         url: jdbc:mysql://localhost:3306/order_db1?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
         username: root
         password: 19970806
+      ds1-slave:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/order_db_slave1?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+        username: root
+        password: 19970806
     sharding:
       tables:
         t_order:
-          actualDataNodes: ds$->{0..1}.t_order_$->{1..3}
+          actualDataNodes: ms_ds$->{0..1}.t_order_$->{1..3}
           tableStrategy:
             inline:
               shardingColumn: order_id
@@ -27,11 +39,29 @@ spring:
           keyGenerator:
             type: SNOWFLAKE
             column: order_id
-      binding-tables: t_order
+        t_config:
+          keyGenerator:
+            type: SNOWFLAKE
+            column: key1
+      binding-tables:
+        - t_order
+      broadcastTables:
+        - t_config
       default-database-strategy:
         inline:
           sharding-column: user_id
-          algorithm-expression: ds$->{user_id % 2}
+          algorithm-expression: ms_ds$->{user_id % 2}
+      masterSlaveRules:
+        ms_ds0:
+          masterDataSourceName: ds0
+          slaveDataSourceNames:
+            - ds0-slave
+          loadBalanceAlgorithmType: ROUND_ROBIN
+        ms_ds1:
+          masterDataSourceName: ds1
+          slaveDataSourceNames:
+            - ds1-slave
+          loadBalanceAlgorithmType: ROUND_ROBIN
     props:
       sql:
         show: true
