--- a/springboot-webflux/sonar-project.properties
+++ b/springboot-webflux/sonar-project.properties
@@ -1,6 +1,6 @@
 #must be unique in a given SonarQube instance
-sonar.projectKey=web_demo_pipeline
-sonar.projectName=web_demo_pipeline
+sonar.projectKey=springboot-webflux
+sonar.projectName=springboot-webflux
 sonar.projectVersion=1.0
 
 #Path is relative to the sonar-project.properties file. Replace "" by "/" on Windows.
@@ -8,7 +8,8 @@ sonar.projectVersion=1.0
 #If not set, SonarQube starts looking for source code from the directory containing
 #the sonar-project.properties file.
 sonar.sources=.
-sonar.exclusions=**/test/**,**/target/**
+sonar.exclusions=test
+sonar.java.binaries=target/classes
 sonar.java.source=1.8
 sonar.java.target=1.8
 sonar.sourceEncoding=UTF-8
