--- a/springboot-webflux/pom.xml
+++ b/springboot-webflux/pom.xml
@@ -89,7 +89,7 @@
                     <username>admin</username>
                     <password>Harbor12345</password>
                     <buildArgs>
-                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                 </configuration>
             </plugin>
