--- a/springboot-webflux/pom.xml
+++ b/springboot-webflux/pom.xml
@@ -10,14 +10,14 @@
     </parent>
     <groupId>com.clownfish7</groupId>
     <artifactId>springboot-webflux</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>springboot-webflux</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
         <dockerfile.maven.version>1.4.0</dockerfile.maven.version>
-        <docker.registry.name.prefix>192.168.116.201:85/projects</docker.registry.name.prefix>
+        <docker.registry.name.prefix>192.168.116.201:85/project</docker.registry.name.prefix>
     </properties>
 
     <dependencies>
