--- a/springboot-actuator/src/main/resources/application.yml
+++ b/springboot-actuator/src/main/resources/application.yml
@@ -51,3 +51,4 @@ info:
 #threaddump       \u6267\u884C\u4E00\u4E2A\u7EBF\u7A0Bdump                                            Yes
 #httptrace        \u663E\u793AHTTP\u8DDF\u8E2A\u4FE1\u606F(\u9ED8\u8BA4\u663E\u793A\u6700\u540E100\u4E2AHTTP\u8BF7\u6C42 - \u54CD\u5E94\u4EA4\u6362)          Yes
 
+#配置文件中文git上传变ASCII测试
