--- a/springboot-elasticsearch/src/main/resources/application.yml
+++ b/springboot-elasticsearch/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
   elasticsearch:
     jest:
       uris: http://192.168.116.151:9200
+      username:
+      password:
   data:
     elasticsearch:
       cluster-name: elasticsearch
