--- a/springboot-restdoc/pom.xml
+++ b/springboot-restdoc/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.3.0.RELEASE</version>
+        <relativePath/>
     </parent>
     <groupId>com.clownfish7</groupId>
     <artifactId>springboot-restdoc</artifactId>
@@ -16,6 +16,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <fastjson.version>1.2.58</fastjson.version>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
     </properties>
 
     <dependencies>
@@ -23,11 +25,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -44,33 +51,135 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.asciidoctor</groupId>
-                <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.8</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <!-- change maven build utc time  -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.9.1</version>
                 <executions>
                     <execution>
-                        <id>generate-docs</id>
+                        <id>timestamp-property</id>
+                        <goals>
+                            <goal>timestamp-property</goal>
+                        </goals>
+                        <configuration>
+                            <name>build.time</name>
+                            <pattern>yyyy-MM-dd HH:mm:ss</pattern>
+                            <locale>zh_CN</locale>
+                            <timeZone>Asia/Shanghai</timeZone>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <configuration>
+                    <attributes>
+                        <!-- 使用节在生成中启用节编号 -->
+                        <sectnums>true</sectnums>
+                        <!-- 将版本和生成日期添加到标头 -->
+                        <revnumber>${project.version}</revnumber>
+                        <!-- 修改 maven.build.timestamp 为指定时区即上方插件定义的时间 -->
+                        <!--<revdate>${maven.build.timestamp}</revdate>-->
+                        <revdate>${build.time}</revdate>
+                        <!-- asciidoctor 官网 copy 来的，似乎并没有什么用，没有在生成的 doc 中看到 organization -->
+                        <organization>${project.organization.name}</organization>
+                        <!-- default is the last update time with file which /src/main/asciidoc/*.adoc -->
+                        <docdatetime>${build.time}</docdatetime>
+                    </attributes>
+                </configuration>
+                <executions>
+                    <!-- html -->
+                    <execution>
+                        <id>output-html</id>
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
-                            <backend>html</backend>
+                            <backend>html5</backend>
+                            <doctype>book</doctype>
+                        </configuration>
+                    </execution>
+
+                    <!-- pdf -->
+                    <execution>
+                        <id>output-pdf</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <doctype>book</doctype>
+                            <!-- 中文乱码 -->
+                            <attributes>
+                                <pdf-fontsdir>${basedir}/pdf/fonts</pdf-fontsdir>
+                                <pdf-stylesdir>${basedir}/pdf/themes</pdf-stylesdir>
+                                <pdf-style>cn</pdf-style>
+                            </attributes>
+                        </configuration>
+                    </execution>
+
+                    <!-- xml -->
+                    <execution>
+                        <id>output-docbook</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>docbook</backend>
                             <doctype>book</doctype>
                         </configuration>
                     </execution>
                 </executions>
                 <dependencies>
+                    <!-- maybe dont need - copy from spring-restdoc -->
                     <dependency>
                         <groupId>org.springframework.restdocs</groupId>
                         <artifactId>spring-restdocs-asciidoctor</artifactId>
-                        <version>${spring-restdocs.version}</version>
+                        <version>2.0.4.RELEASE</version>
+                    </dependency>
+                    <!-- pdf need -->
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>
+                                ${project.build.outputDirectory}/static/docs
+                            </outputDirectory>
+                            <!-- 每个版本在单独的文件夹中生成文档 -->
+                            <!--<outputDirectory>target/generated-docs/${project.version}</outputDirectory>-->
+                            <resources>
+                                <resource>
+                                    <directory>
+                                        ${project.build.directory}/generated-docs
+                                    </directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
