--- a/springboot-activiti7/src/main/resources/application.yml
+++ b/springboot-activiti7/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.97.8.7:3306/activity_y2y_another?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://47.97.8.7:3306/activity7_y2y_another?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: dev
-    password: productdev123
+    password: pass
     hikari:
       minimum-idle: 5
       maximum-pool-size: 20
